--- a/templates/game.html
+++ b/templates/game.html
@@ -227,8 +227,7 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
         </div>
       </div>
     </div>
-    <div class="column is-one-fifth">
-      <p class="bd-notification is-info">Cards remaining: <b id="b_nb_cards_pile"></b></p>
+    <div class="column is-narrow">
     </div>
 
   </div>
