--- a/templates/game.html
+++ b/templates/game.html
@@ -60,7 +60,7 @@
         status_notif.addClass('is-warning').removeClass('is-info');
         status_notif.find('p').eq(0).append('<br><b>It\'s your turn.</b>').show();
         button_turn_indicator.addClass('is-warning is-loading').removeClass('is-info');
-        // $('#audio_bell')[0].play();  // play bell sound
+        $('#audio_bell')[0].play();  // play bell sound
       } else {
         status_notif.addClass('is-info').removeClass('is-warning');
         button_turn_indicator.addClass('is-info').removeClass('is-warning is-loading');
@@ -168,7 +168,7 @@
       if (id_card === 'placeholder'){
         return false;
       }
-      var description =  $('#description_input').val();
+      var description = $('#description_input').val();
       var description_disabled = $('#description_input').prop('disabled');
       // check if input is read only to know if the storyteller is telling or if an other player is playing a card
       if (description_disabled === true) {
@@ -477,10 +477,9 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
   <p>Cards remaining: <b id="b_nb_cards_pile"></b></p>
 </div>
 
-<!--
+
 <audio id="audio_bell">
   <source src="/static/audio/bell.ogg" type="audio/ogg">
   <source src="/static/audio/bell.mp3" type="audio/mpeg">
 </audio>
--->
 {% endblock %}
