--- a/templates/game.html
+++ b/templates/game.html
@@ -154,6 +154,13 @@
       card.find('.gamecard > img').attr('src', '/static/img/dixit/'+value.id_card+'.png');
       card.find('.card-owner').text(value.username);
       card.find('.card-points').text(value.points);
+      if (value.correct_card) {
+        card.find('.gamecard').addClass('correct');
+        card.find('.voters-star').show();
+      } else {
+        card.find('.gamecard').removeClass('correct');
+        card.find('.voters-star').hide();
+      }
       var list_voterscard = card.find('.list-voters');
       list_voterscard.empty();
       value.usernames_voters.forEach(wrapInLi);
@@ -330,7 +337,8 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
 
   <div class="container">
     <div id="last_turn" class="columns">
-      <!-- first card-->
+      {% for i in range(6) %}
+      <!-- card-->
       <div class="column card">
         <div class="card-image">
           <figure class="image is-2by3 gamecard">
@@ -344,7 +352,12 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
           </div>
           <div class="media">
             <div class="media-left">
-              <p>Voters:</p>
+              <p>
+                <span class="icon is-small voters-star">
+                  <i class="fas fa-star has-text-warning"></i>
+                </span>
+                Voters
+              </p>
             </div>
             <div class="media-content">
               <ul class="list-voters">
@@ -353,122 +366,7 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
           </div>
         </div>
       </div>
-      <!-- another card -->
-      <div class="column card">
-        <div class="card-image">
-          <figure class="image is-2by3 gamecard">
-            <img src="/static/img/placeholder.png" alt="Card 1 of last turn">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title card-owner"></p>
-            <p class="subtitle is-6"><b class="card-points">0</b> points</p>
-          </div>
-          <div class="media">
-            <div class="media-left">
-              <p>Voters:</p>
-            </div>
-            <div class="media-content">
-              <ul class="list-voters">
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- another card -->
-      <div class="column card">
-        <div class="card-image">
-          <figure class="image is-2by3 gamecard">
-            <img src="/static/img/placeholder.png" alt="Card 1 of last turn">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title card-owner"></p>
-            <p class="subtitle is-6"><b class="card-points">0</b> points</p>
-          </div>
-          <div class="media">
-            <div class="media-left">
-              <p>Voters:</p>
-            </div>
-            <div class="media-content">
-              <ul class="list-voters">
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- another card -->
-      <div class="column card">
-        <div class="card-image">
-          <figure class="image is-2by3 gamecard">
-            <img src="/static/img/placeholder.png" alt="Card 1 of last turn">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title card-owner"></p>
-            <p class="subtitle is-6"><b class="card-points">0</b> points</p>
-          </div>
-          <div class="media">
-            <div class="media-left">
-              <p>Voters:</p>
-            </div>
-            <div class="media-content">
-              <ul class="list-voters">
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- another card -->
-      <div class="column card">
-        <div class="card-image">
-          <figure class="image is-2by3 gamecard">
-            <img src="/static/img/placeholder.png" alt="Card 1 of last turn">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title card-owner"></p>
-            <p class="subtitle is-6"><b class="card-points">0</b> points</p>
-          </div>
-          <div class="media">
-            <div class="media-left">
-              <p>Voters:</p>
-            </div>
-            <div class="media-content">
-              <ul class="list-voters">
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- another card -->
-      <div class="column card">
-        <div class="card-image">
-          <figure class="image is-2by3 gamecard">
-            <img src="/static/img/placeholder.png" alt="Card 1 of last turn">
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="content">
-            <p class="title card-owner"></p>
-            <p class="subtitle is-6"><b class="card-points">0</b> points</p>
-          </div>
-          <div class="media">
-            <div class="media-left">
-              <p>Voters:</p>
-            </div>
-            <div class="media-content">
-              <ul class="list-voters">
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- another card -->
+      {% endfor %}
     </div>
   </div>
 </div>
