change default description

--- a/templates/game.html
+++ b/templates/game.html
@@ -260,7 +260,7 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
     <div class="column box">
       <h3 class="label">Current description</h3>
       <p class="has-text-centered is-size-3">
-        <b id="p_description">Not set yet</b>
+        <b id="p_description">…</b>
       </p>
     </div>
     <div class="column box">
