--- a/templates/index.html
+++ b/templates/index.html
@@ -27,13 +27,16 @@ Virtual board game between friends!
           {{url_for('index', _external=True)|replace("http://", "")|replace("https://", "")}}game/
         </a>
       </p>
-      <p class="control">
+      <p class="control has-icons-left">
         <span class="select">
           <select id="select_deck_name" name="deck">
             {% for deck_name in deck_names %}
             <option value={{ deck_name|tojson }}>{{ deck_name }}</option>
             {% endfor %}
           </select>
+        </span>
+        <span class="icon is-small is-left">
+          <i class="fas fa-palette"></i>
         </span>
       </p>
       <p class="control">
