--- a/templates/index.html
+++ b/templates/index.html
@@ -19,47 +19,54 @@ Virtual board game between friends!
 {% block content %}
 <div class="container">
   <h2 class="title is-3">Create a new game</h2>
-  <p>Set the link to your game</p>
+  <p>Enter game name, choose the deck of cards, click the "create game" button, and share the link to your friends!</p>
   <div class="container">
-    <div class="field has-addons">
-      <p class="control">
-        <a class="button is-static">
-          {{url_for('index', _external=True)|replace("http://", "")|replace("https://", "")}}game/
-        </a>
-      </p>
-      <p class="control has-icons-left">
-        <span class="select">
-          <select id="select_deck_name" name="deck">
+    <!-- ------>
+    <div class="field">
+      <label class="label">Game name</label>
+      <div class="control has-icons-left has-icons-right">
+        <input id="input_game_name" class="input is-primary" type="text" placeholder="Game name" pattern="^[^?&:&quot;'%#]+$" value="bulma">
+        <span class="icon is-small is-left">
+      <i class="fas fa-pen"></i>
+    </span>
+        <span class="icon is-small is-right">
+      <i class="fas fa-check"></i>
+    </span>
+      </div>
+      <p class="help">Simply enter a name for the game, click the "create game" button, and share the link to your friends!</p>
+      <p class="help is-danger is-hidden">Game name should not contain any of these characters: ?, &, :, ', &quot;, %, #.</p>
+    </div>
+
+    <div class="field">
+      <label class="label">Deck of cards</label>
+      <div class="control has-icons-left">
+        <div class="select">
+          <select id="select_deck_name" name="deck_name">
             {% for deck_name in deck_names %}
-            <option value={{ deck_name|tojson }}>{{ deck_name }}</option>
+            <option value={{ deck_name|tojson }}>{{ deck_name|title }}</option>
             {% endfor %}
           </select>
-        </span>
+        </div>
         <span class="icon is-small is-left">
           <i class="fas fa-palette"></i>
         </span>
-      </p>
-      <p class="control">
-        <a class="button is-static">
-          /
-        </a>
-      </p>
-      <p class="control is-expanded">
-        <input id="input_game_name" class="input is-primary" type="text" placeholder="Game name" pattern="^[^?&:&quot;'%#]+$" title="Game name should not contain any of these characters: ?, &, :, ', &quot;, %, #.">
-      </p>
-      <div class="control">
-        <button id="button_create_game" type="submit" class="button is-primary">Create game</button>
       </div>
     </div>
-    <p class="help">Simply enter a name for the game, click the "create game" button, and share the link to your friends!</p>
-  </div>
-</div>
 
-<div class="container">
-  <div class="message is-danger">
-    <div class="message-body">
-      By creating a game, you certify that you possess a physical copy of the game Dixit. <br>
-      This service was created to offer Dixit owners a way to play during the lockdown of the Covid-19 crisis. It is not intended to distribute new digital copies of the game.
+    <div class="message is-danger">
+      <div class="message-body">
+        By creating a game, you certify that you possess a physical copy of the game Dixit. <br>
+        This service was created to offer Dixit owners a way to play during the lockdown of the Covid-19 crisis. It is not intended to distribute new digital copies of the game.
+      </div>
+    </div>
+
+    <div class="field is-grouped">
+      <div class="control">
+        <button id="button_create_game" type="submit" class="button is-primary">Create game</button> <!-- is-link -->
+      </div>
+      <div class="control">
+        <button id="button_copy_link" class="button is-light is-small">Copy share link</button>
+      </div>
     </div>
   </div>
 </div>
