add temp tooltip on copy button

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,10 @@
         dummy.select();
         document.execCommand("copy");
         document.body.removeChild(dummy);
+        $(this).attr('data-tooltip', 'Copied!');
+        setTimeout(function(){
+          $('#button_copy_link').removeAttr('data-tooltip');
+        }, 2000);
       });
     });
   </script>
