add number of cards remaining by default

--- a/templates/game.html
+++ b/templates/game.html
@@ -359,7 +359,7 @@ Dear <b id="username">{{ username }}</b>, welcome to the game {{ game_name|repla
 <!-- current pile -->
 <div class="container">
   <h2 class="title is-3">Pile</h2>
-  <p>Cards remaining: <b id="b_nb_cards_pile"></b></p>
+  <p>Cards remaining: <b id="b_nb_cards_pile">84</b></p>
 </div>
 
 
