change figcaption text

--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,7 @@ Virtual board game between friends!
         <div class="column is-narrow">
           <figure id="figure_random_card" class="image is-hidden">
             <img id="img_random_card" alt="A random card from the selected deck">
-            <figcaption>An example of card</figcaption>
+            <figcaption>A card from the deck</figcaption>
           </figure>
         </div>
       </div>
